Rebrand to VerityCompany: update UI, package name, and docs

--- a/public/index.html
+++ b/public/index.html
@@ -3,221 +3,231 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ReadBridge – Guided Reading Assignments</title>
+  <title>Verity – Instructional Adaptation Copilot</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&family=Plus+Jakarta+Sans:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
-  :root {
-    --bg-main: #f5f8fc;
-    --card-bg: #ffffff;
-    --primary: #2563eb;
-    --primary-soft: #e0ebff;
-    --accent: #14b8a6;
-    --text-main: #0f172a;
-    --text-dim: #475569;
-    --border-soft: #e2e8f0;
-  }
-
-  * { box-sizing: border-box; }
-
-  body {
-    margin: 0;
-    background: var(--bg-main);
-    color: var(--text-main);
-    font-family: 'Plus Jakarta Sans', sans-serif;
-    line-height: 1.6;
-  }
-
-  header {
-    padding: 20px 6%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #ffffff;
-    border-bottom: 1px solid var(--border-soft);
-  }
-
-  .logo {
-    font-family: 'Outfit', sans-serif;
-    font-size: 1.6rem;
-    font-weight: 600;
-    color: var(--primary);
-  }
-
-  .hero {
-    text-align: center;
-    padding: 80px 10%;
-    background: linear-gradient(180deg, #eef4ff 0%, #f5f8fc 100%);
-  }
-
-  .hero h1 {
-    font-family: 'Outfit', sans-serif;
-    font-size: 3rem;
-    letter-spacing: -1px;
-    margin-bottom: 18px;
-  }
-
-  .hero p {
-    color: var(--text-dim);
-    max-width: 650px;
-    margin: 0 auto 30px;
-    font-size: 1.1rem;
-  }
-
-  main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 32px;
-    padding: 60px 7%;
-  }
-
-  .card {
-    background: var(--card-bg);
-    padding: 40px;
-    border-radius: 20px;
-    border: 1px solid var(--border-soft);
-    box-shadow: 0 10px 30px rgba(0,0,0,0.04);
-  }
-
-  h2, h3, h4 {
-    font-family: 'Outfit', sans-serif;
-    margin-top: 0;
-  }
-
-  .card-subtitle {
-    color: var(--text-dim);
-    margin-bottom: 30px;
-  }
-
-  .form-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 22px;
-  }
-
-  .field {
-    display: flex;
-    flex-direction: column;
-  }
-
-  label {
-    font-size: 0.85rem;
-    font-weight: 600;
-    color: var(--text-main);
-    margin-bottom: 6px;
-  }
-
-  input, select {
-    background: #ffffff;
-    color: var(--text-main);
-    border: 1px solid var(--border-soft);
-    border-radius: 12px;
-    padding: 13px;
-    font-size: 0.95rem;
-  }
-
-  input:focus, select:focus {
-    outline: none;
-    border-color: var(--primary);
-    box-shadow: 0 0 0 3px var(--primary-soft);
-  }
-
-  .helper-text {
-    font-size: 0.75rem;
-    color: var(--text-dim);
-    margin-top: 6px;
-  }
-
-  .button-row {
-    margin-top: 32px;
-    display: flex;
-    align-items: center;
-    gap: 18px;
-  }
-
-  button {
-    border-radius: 999px;
-    border: none;
-    padding: 14px 32px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.2s ease;
-    font-size: 0.95rem;
-  }
-
-  .btn-primary {
-    background: var(--primary);
-    color: #ffffff;
-  }
-
-  .btn-primary:hover {
-    background: #1e4ed8;
-    transform: translateY(-1px);
-  }
-
-  .btn-secondary {
-    background: #ffffff;
-    color: var(--primary);
-    border: 1px solid var(--border-soft);
-    margin-top: 30px;
-  }
-
-  .btn-secondary:hover {
-    background: var(--primary-soft);
-  }
-
-  .status-text {
-    font-size: 0.8rem;
-    color: var(--text-dim);
-  }
-
-  .output-placeholder {
-    color: var(--text-dim);
-    font-style: italic;
-  }
-
-  .warning-banner {
-    background: #fff7ed;
-    color: #92400e;
-    padding: 12px;
-    border-radius: 12px;
-    font-size: 0.8rem;
-    margin-bottom: 20px;
-    border: 1px solid #fde68a;
-  }
-
-  .output-card-sub {
-    margin-bottom: 26px;
-  }
-
-  .content-box {
-    background: #f8fafc;
-    padding: 16px;
-    border-radius: 14px;
-    border: 1px solid var(--border-soft);
-    font-size: 0.95rem;
-  }
-
-  @media (max-width: 900px) {
-    main {
-      grid-template-columns: 1fr;
+    :root {
+      --bg-main: #f5f8fc;
+      --card-bg: #ffffff;
+      --primary: #2563eb;
+      --primary-soft: #e0ebff;
+      --accent: #14b8a6;
+      --text-main: #0f172a;
+      --text-dim: #475569;
+      --border-soft: #e2e8f0;
     }
-  }
-</style>
+
+    * { box-sizing: border-box; }
+
+    body {
+      margin: 0;
+      background: var(--bg-main);
+      color: var(--text-main);
+      font-family: 'Plus Jakarta Sans', sans-serif;
+      line-height: 1.6;
+    }
+
+    header {
+      padding: 20px 6%;
+      display: flex;
+      align-items: center;
+      background: #ffffff;
+      border-bottom: 1px solid var(--border-soft);
+    }
+
+    .logo {
+      font-family: 'Outfit', sans-serif;
+      font-size: 1.6rem;
+      font-weight: 600;
+      color: var(--primary);
+    }
+
+    .hero {
+      padding: 80px 10% 60px;
+      text-align: center;
+      background: linear-gradient(180deg, #eef4ff 0%, #f5f8fc 100%);
+    }
+
+    .hero h1 {
+      font-family: 'Outfit', sans-serif;
+      font-size: 3rem;
+      letter-spacing: -1px;
+      margin-bottom: 18px;
+    }
+
+    .hero p {
+      color: var(--text-dim);
+      max-width: 720px;
+      margin: 0 auto;
+      font-size: 1.1rem;
+    }
+
+    main {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 32px;
+      padding: 60px 7%;
+    }
+
+    .card {
+      background: var(--card-bg);
+      padding: 40px;
+      border-radius: 20px;
+      border: 1px solid var(--border-soft);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.04);
+      animation: fadeUp 0.5s ease;
+    }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(12px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    h2, h3, h4 {
+      font-family: 'Outfit', sans-serif;
+      margin-top: 0;
+    }
+
+    .card-subtitle {
+      color: var(--text-dim);
+      margin-bottom: 26px;
+      font-size: 0.95rem;
+    }
+
+    .field {
+      margin-bottom: 22px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    label {
+      font-size: 0.85rem;
+      font-weight: 600;
+      margin-bottom: 6px;
+    }
+
+    textarea, input, select {
+      border: 1px solid var(--border-soft);
+      border-radius: 14px;
+      padding: 14px;
+      font-size: 0.95rem;
+      font-family: inherit;
+      resize: vertical;
+    }
+
+    textarea:focus, input:focus, select:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 3px var(--primary-soft);
+    }
+
+    .helper-text {
+      font-size: 0.75rem;
+      color: var(--text-dim);
+      margin-top: 6px;
+    }
+
+    .pill-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 6px;
+    }
+
+    .pill {
+      padding: 8px 14px;
+      border-radius: 999px;
+      border: 1px solid var(--border-soft);
+      font-size: 0.8rem;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .pill:hover {
+      background: var(--primary-soft);
+      border-color: var(--primary);
+    }
+
+    .button-row {
+      margin-top: 32px;
+      display: flex;
+      align-items: center;
+      gap: 18px;
+    }
+
+    button {
+      border-radius: 999px;
+      border: none;
+      padding: 14px 32px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.25s ease;
+      font-size: 0.95rem;
+    }
+
+    .btn-primary {
+      background: var(--primary);
+      color: #ffffff;
+    }
+
+    .btn-primary:hover {
+      background: #1e4ed8;
+      transform: translateY(-2px);
+      box-shadow: 0 10px 25px rgba(37,99,235,0.25);
+    }
+
+    .status-text {
+      font-size: 0.8rem;
+      color: var(--text-dim);
+    }
+
+    .warning-banner {
+      background: #fff7ed;
+      color: #92400e;
+      padding: 12px;
+      border-radius: 12px;
+      font-size: 0.8rem;
+      margin-bottom: 20px;
+      border: 1px solid #fde68a;
+    }
+
+    .content-box {
+      background: #f8fafc;
+      padding: 18px;
+      border-radius: 14px;
+      border: 1px solid var(--border-soft);
+      font-size: 0.95rem;
+      transition: all 0.3s ease;
+    }
+
+    .output-placeholder {
+      color: var(--text-dim);
+      font-style: italic;
+      padding-top: 20px;
+    }
+
+    @media (max-width: 900px) {
+      main {
+        grid-template-columns: 1fr;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
 <header>
-  <div class="logo">ReadBridge</div>
+  <div class="logo">Verity</div>
 </header>
 
 <section class="hero">
-  <h1>Guided Reading, Made Simple</h1>
+  <h1>Adapt With Confidence</h1>
   <p>
-    A teacher-controlled drafting tool for creating student-ready reading assignments.
-    You choose the skills. You review everything.
+    Verity is a teacher-facing AI workspace that helps you adapt instructional texts
+    without losing meaning — surfacing what changed, what might be lost, and what to review
+    before students see it.
   </p>
 </section>
 
@@ -225,104 +235,78 @@
 
   <!-- INPUT -->
   <section class="card">
-    <h2>Create Assignment</h2>
+    <h2>Review & Adapt a Text</h2>
     <p class="card-subtitle">
-      Select the reading skills and expectations you are targeting for this student.
+      Start with the original material. Tell Verity what matters so it can draft supports
+      and flag potential instructional drift.
     </p>
 
-    <div class="form-grid">
-      <div class="field">
-        <label>Reading Focus</label>
-        <select id="readingFocus">
-          <option value="">Select focus…</option>
-          <option>Phonics (CVCe / CVVC)</option>
-          <option>Reading Comprehension</option>
-          <option>Sentence Writing</option>
-        </select>
-        <div class="helper-text">Choose the primary skill you are working on.</div>
-      </div>
+    <div class="field">
+      <label>Original Text</label>
+      <textarea rows="6" placeholder="Paste the passage, article, or excerpt you already use…"></textarea>
+      <div class="helper-text">This text remains your source of truth.</div>
+    </div>
 
-      <div class="field">
-        <label>Approximate Reading Level</label>
-        <input id="readingLevel" placeholder="e.g. Grade 3, Lexile 450" />
-        <div class="helper-text">Use your professional judgment.</div>
-      </div>
+    <div class="field">
+      <label>What must be preserved?</label>
+      <input placeholder="e.g. key ideas, inference demands, vocabulary exposure" />
+      <div class="helper-text">Verity prioritizes these during adaptation.</div>
+    </div>
 
-      <div class="field">
-        <label>Student Interest</label>
-        <input id="topic" placeholder="e.g. football, animals, space" />
-        <div class="helper-text">Helps increase engagement.</div>
-      </div>
+    <div class="field">
+      <label>Instructional Goal</label>
+      <input placeholder="e.g. Cite evidence in complete sentences" />
+      <div class="helper-text">How students are expected to interact with the text.</div>
+    </div>
 
-      <div class="field">
-  <label>Grade Band</label>
-  <select id="gradeBand">
-    <option value="">Select band…</option>
-    <option>Early Elementary (K–1)</option>
-    <option>Lower Elementary (2–3)</option>
-    <option>Upper Elementary (4–5)</option>
-    <option>Middle School (6–7)</option>
-    <option>Upper Middle School (8)</option>
-    <option>High School (9–10)</option>
-    <option>High School (11–12)</option>
-  </select>
-  <div class="helper-text">Used for tone, vocabulary, and expectations.</div>
-</div>
+    <div class="field">
+      <label>Target Accessibility Range</label>
+      <input placeholder="e.g. Grade 4–5, simplified syntax" />
+      <div class="helper-text">Used to draft supports, not replace judgment.</div>
+    </div>
 
-      <div class="field" style="grid-column: span 2;">
-        <label>Assignment Goal</label>
-        <input id="assignmentGoal" placeholder="e.g. Answer in complete sentences" />
-        <div class="helper-text">What you want the student to practice or demonstrate.</div>
+    <div class="field">
+      <label>Optional context</label>
+      <div class="pill-row">
+        <div class="pill">Vocabulary support</div>
+        <div class="pill">Sentence frames</div>
+        <div class="pill">Inference scaffolds</div>
+        <div class="pill">Symbol / visual cues</div>
       </div>
     </div>
 
     <div class="button-row">
-      <button class="btn-primary" id="generateBtn">Generate Assignment</button>
-      <span class="status-text" id="status">Ready</span>
+      <button class="btn-primary">Draft & Review</button>
+      <span class="status-text">Awaiting input</span>
     </div>
   </section>
 
   <!-- OUTPUT -->
   <section class="card">
-    <h3>Generated Assignment</h3>
+    <h3>Adaptation Review</h3>
 
-    <div id="placeholder" class="output-placeholder">
-      Your generated reading assignment will appear here.
+    <div class="output-placeholder">
+      Drafted supports and review flags will appear here.
     </div>
 
-    <div id="output" style="display:none;">
-      <div class="warning-banner">
-        ⚠️ Please review all content before assigning to students.
-      </div>
-
-      <div class="output-card-sub">
-        <h4>Reading Passage</h4>
-        <div class="content-box" id="passage"></div>
-      </div>
-
-      <div class="output-card-sub">
-        <h4>Vocabulary / Skill Practice</h4>
-        <div class="content-box" id="vocab"></div>
-      </div>
-
-      <div class="output-card-sub">
-        <h4>Comprehension Questions</h4>
-        <div class="content-box" id="questions"></div>
-      </div>
-
-      <div class="output-card-sub">
-        <h4>Teacher Notes</h4>
-        <div class="content-box" id="notes"></div>
-      </div>
-
-      <button class="btn-secondary" onclick="location.reload()">Create New Assignment</button>
+    <!-- Example future output structure -->
+    <!--
+    <div class="warning-banner">
+      ⚠️ Review flagged changes before sharing with students.
     </div>
+
+    <h4>Adapted Text (Draft)</h4>
+    <div class="content-box"></div>
+
+    <h4>Potential Meaning Drift</h4>
+    <div class="content-box"></div>
+
+    <h4>Teacher Notes</h4>
+    <div class="content-box"></div>
+    -->
   </section>
 
 </main>
 
-<script>
-  // Set backend URL for the frontend; override by defining window.__BACKEND_URL before this script if needed.
-  window.__BACKEND_URL = window.__BACKEND_URL || "https://readbridge-backend.onrender.com";
-</script>
-<script src="./app.js" defer></script>
+</body>
+</html>
