Update landing content

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Verity – Instructional Adaptation Copilot</title>
+  <title>Intentra – Instructional Adaptation Copilot</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&family=Plus+Jakarta+Sans:wght@400;600&display=swap" rel="stylesheet">
 
@@ -219,15 +219,16 @@
 <body>
 
 <header>
-  <div class="logo">Verity</div>
+  <div class="logo">Intentra</div>
 </header>
 
 <section class="hero">
-  <h1>Adapt With Confidence</h1>
+  <h1>Differentiate in Minutes, Not Hours</h1>
   <p>
-    Verity is a teacher-facing AI workspace that helps you adapt instructional texts
-    without losing meaning — surfacing what changed, what might be lost, and what to review
-    before students see it.
+    Intentra is your intentional‑learning copilot — generating leveled, scaffolded, and 
+    interest‑aligned versions of any text while preserving the meaning that matters. 
+    Skip the endless rewriting, re‑leveling, and rebuilding of supports. Focus on teaching, 
+    and let Intentra handle the heavy lift.
   </p>
 </section>
 
@@ -235,34 +236,35 @@
 
   <!-- INPUT -->
   <section class="card">
-    <h2>Review & Adapt a Text</h2>
+    <h2>Transform Any Text for Any Learner</h2>
     <p class="card-subtitle">
-      Start with the original material. Tell Verity what matters so it can draft supports
-      and flag potential instructional drift.
+      Paste the text you already use. Intentra generates multiple reading levels, phonics‑aligned
+      versions, symbol‑supported options, vocabulary supports, and scaffolds — all while keeping
+      the original intent intact.
     </p>
 
     <div class="field">
       <label>Original Text</label>
-      <textarea rows="6" placeholder="Paste the passage, article, or excerpt you already use…"></textarea>
-      <div class="helper-text">This text remains your source of truth.</div>
+      <textarea rows="6" placeholder="Paste the passage, chapter excerpt, article, or assignment you want adapted…"></textarea>
+      <div class="helper-text">Intentra uses this as the anchor for all differentiated versions.</div>
     </div>
 
     <div class="field">
       <label>What must be preserved?</label>
-      <input placeholder="e.g. key ideas, inference demands, vocabulary exposure" />
-      <div class="helper-text">Verity prioritizes these during adaptation.</div>
+      <input placeholder="e.g. plot events, tone, key vocabulary, inferencing demands" />
+      <div class="helper-text">Ensures adaptations stay true to your instructional goals.</div>
     </div>
 
     <div class="field">
       <label>Instructional Goal</label>
-      <input placeholder="e.g. Cite evidence in complete sentences" />
-      <div class="helper-text">How students are expected to interact with the text.</div>
+      <input placeholder="e.g. Identify theme, cite evidence, practice CVCe long vowels" />
+      <div class="helper-text">Intentra aligns supports and questions to this target.</div>
     </div>
 
     <div class="field">
       <label>Target Accessibility Range</label>
-      <input placeholder="e.g. Grade 4–5, simplified syntax" />
-      <div class="helper-text">Used to draft supports, not replace judgment.</div>
+      <input placeholder="e.g. Grade 2–3, emerging readers, simplified syntax" />
+      <div class="helper-text">Guides the level, scaffolds, and vocabulary load.</div>
     </div>
 
     <div class="field">
@@ -273,37 +275,24 @@
         <div class="pill">Inference scaffolds</div>
         <div class="pill">Symbol / visual cues</div>
       </div>
+      <div class="helper-text">Add supports commonly needed for SPED, ESL, and intervention.</div>
     </div>
 
     <div class="button-row">
       <button class="btn-primary">Draft & Review</button>
-      <span class="status-text">Awaiting input</span>
+      <span class="status-text">Ready when you are</span>
     </div>
   </section>
 
   <!-- OUTPUT -->
   <section class="card">
-    <h3>Adaptation Review</h3>
+    <h3>Your Adapted Versions & Review Notes</h3>
 
     <div class="output-placeholder">
-      Drafted supports and review flags will appear here.
+      Intentra will generate leveled texts, scaffolds, vocabulary supports, phonics-aligned word lists,
+      and meaning‑preservation checks here.
     </div>
 
-    <!-- Example future output structure -->
-    <!--
-    <div class="warning-banner">
-      ⚠️ Review flagged changes before sharing with students.
-    </div>
-
-    <h4>Adapted Text (Draft)</h4>
-    <div class="content-box"></div>
-
-    <h4>Potential Meaning Drift</h4>
-    <div class="content-box"></div>
-
-    <h4>Teacher Notes</h4>
-    <div class="content-box"></div>
-    -->
   </section>
 
 </main>
