Fix: correct model name, add JSON format, enable dotenv, add CORS and backend URL config

--- a/public/index.html
+++ b/public/index.html
@@ -297,5 +297,11 @@
 
 </main>
 
+<script>
+  // Set backend URL for Vercel-to-Render communication
+  window.__BACKEND_URL = window.__BACKEND_URL || "https://readbridge-backend.onrender.com";
+</script>
+<script src="./app.js"></script>
+
 </body>
 </html>
