--- a/public/index.html
+++ b/public/index.html
@@ -178,34 +178,210 @@
       box-shadow: 0 10px 25px rgba(37,99,235,0.25);
     }
 
+    .btn-primary:active {
+      transform: translateY(0px);
+      box-shadow: 0 4px 12px rgba(37,99,235,0.15);
+    }
+
     .status-text {
       font-size: 0.8rem;
       color: var(--text-dim);
+      transition: all 0.3s ease;
     }
 
+    .status-text.loading {
+      color: var(--primary);
+      font-weight: 600;
+    }
+
+    /* Output animations */
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(12px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes slideInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-8px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .output-section {
+      animation: fadeInUp 0.5s ease forwards;
+      opacity: 0;
+    }
+
+    .output-section:nth-child(1) { animation-delay: 0s; }
+    .output-section:nth-child(2) { animation-delay: 0.1s; }
+    .output-section:nth-child(3) { animation-delay: 0.2s; }
+    .output-section:nth-child(4) { animation-delay: 0.3s; }
+    .output-section:nth-child(5) { animation-delay: 0.4s; }
+
     .warning-banner {
-      background: #fff7ed;
+      background: linear-gradient(135deg, #fff7ed 0%, #fef3c7 100%);
       color: #92400e;
-      padding: 12px;
+      padding: 14px 16px;
       border-radius: 12px;
-      font-size: 0.8rem;
-      margin-bottom: 20px;
+      font-size: 0.85rem;
+      font-weight: 500;
+      margin-bottom: 24px;
       border: 1px solid #fde68a;
+      animation: slideInDown 0.4s ease;
+    }
+
+    .output-header {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      cursor: pointer;
+      padding: 12px 0;
+      border-bottom: 2px solid transparent;
+      transition: border-color 0.2s ease;
+      user-select: none;
+    }
+
+    .output-header:hover {
+      border-bottom-color: var(--primary);
+    }
+
+    .output-header h4 {
+      margin: 0;
+      font-size: 1.05rem;
+      color: var(--text-main);
+      flex: 1;
+    }
+
+    .toggle-icon {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 24px;
+      height: 24px;
+      color: var(--primary);
+      transition: transform 0.3s ease;
+      font-weight: bold;
+    }
+
+    .toggle-icon.collapsed {
+      transform: rotate(-90deg);
     }
 
     .content-box {
-      background: #f8fafc;
-      padding: 18px;
-      border-radius: 14px;
+      background: linear-gradient(135deg, #f8fafc 0%, #ffffff 100%);
+      padding: 16px;
+      border-radius: 12px;
       border: 1px solid var(--border-soft);
       font-size: 0.95rem;
+      line-height: 1.6;
+      color: var(--text-main);
       transition: all 0.3s ease;
+      margin-top: 12px;
+      max-height: 1000px;
+      overflow: hidden;
+      animation: fadeInUp 0.4s ease;
+    }
+
+    .content-box.collapsed {
+      max-height: 0;
+      padding: 0 16px;
+      margin-top: 0;
+      border: none;
+      background: transparent;
+    }
+
+    .content-box h4 {
+      margin: 0 0 12px 0;
+      font-size: 1rem;
+      color: var(--primary);
+    }
+
+    .content-box ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .content-box li {
+      padding: 8px 0 8px 24px;
+      position: relative;
+      border-left: 3px solid #e5e7eb;
+      padding-left: 16px;
+      margin-bottom: 8px;
+      color: var(--text-main);
+    }
+
+    .content-box li:before {
+      content: "✓";
+      position: absolute;
+      left: -12px;
+      color: var(--primary);
+      font-weight: bold;
+    }
+
+    .content-box li:last-child {
+      margin-bottom: 0;
+    }
+
+    .drift-flag {
+      background: #fef3c7;
+      padding: 12px;
+      border-radius: 8px;
+      margin-bottom: 12px;
+      border-left: 4px solid #f59e0b;
+    }
+
+    .drift-flag:last-child {
+      margin-bottom: 0;
+    }
+
+    .drift-flag p {
+      margin: 0;
+      font-size: 0.9rem;
+    }
+
+    .drift-flag strong {
+      display: block;
+      color: #d97706;
+      margin-bottom: 4px;
+      font-size: 0.85rem;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
+    .drift-flag em {
+      display: block;
+      color: #78350f;
+      font-style: italic;
+      margin-top: 4px;
+      font-size: 0.85rem;
+    }
+
+    .adapted-text {
+      font-size: 1rem;
+      line-height: 1.8;
+      color: var(--text-main);
+      background: #f9fafb;
+      padding: 16px;
+      border-left: 4px solid var(--primary);
+      border-radius: 4px;
     }
 
     .output-placeholder {
       color: var(--text-dim);
       font-style: italic;
       padding-top: 20px;
+      text-align: center;
     }
 
     @media (max-width: 900px) {
