--- a/public/index.html
+++ b/public/index.html
@@ -143,11 +143,24 @@
       font-size: 0.8rem;
       cursor: pointer;
       transition: all 0.2s ease;
+      background: #ffffff;
+      color: var(--text-main);
+      user-select: none;
     }
 
     .pill:hover {
       background: var(--primary-soft);
       border-color: var(--primary);
+      color: var(--primary);
+    }
+
+    .pill.active {
+      background: var(--primary);
+      border-color: var(--primary);
+      color: #ffffff;
+      font-weight: 600;
+      box-shadow: 0 4px 12px rgba(37, 99, 235, 0.3);
+      transform: scale(1.05);
     }
 
     .button-row {
