refactor: remove warning banner and support list checkmarks

--- a/public/index.html
+++ b/public/index.html
@@ -326,20 +326,9 @@
     }
 
     .content-box li {
-      padding: 8px 0 8px 24px;
-      position: relative;
-      border-left: 3px solid #e5e7eb;
-      padding-left: 16px;
+      padding: 8px 0;
       margin-bottom: 8px;
       color: var(--text-main);
-    }
-
-    .content-box li:before {
-      content: "✓";
-      position: absolute;
-      left: -12px;
-      color: var(--primary);
-      font-weight: bold;
     }
 
     .content-box li:last-child {
