--- a/public/index.html
+++ b/public/index.html
@@ -474,6 +474,63 @@
       100% { background-position: -200% 0; }
     }
 
+    /* File upload styling */
+    .textarea-wrapper {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+
+    .textarea-actions {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+    }
+
+    .file-input-wrapper {
+      position: relative;
+      flex: 1;
+    }
+
+    #fileInput {
+      display: none;
+    }
+
+    .btn-file-upload {
+      background: linear-gradient(135deg, #f3f4f6 0%, #e5e7eb 100%);
+      color: var(--text-main);
+      border: 1px solid var(--border-soft);
+      padding: 10px 16px;
+      font-size: 0.85rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      white-space: nowrap;
+    }
+
+    .btn-file-upload:hover {
+      background: linear-gradient(135deg, #e5e7eb 0%, #d1d5db 100%);
+      border-color: var(--primary);
+      color: var(--primary);
+    }
+
+    .btn-file-upload:active {
+      transform: scale(0.98);
+    }
+
+    .file-name-display {
+      font-size: 0.8rem;
+      color: var(--primary);
+      font-weight: 500;
+      padding: 6px 0;
+      display: none;
+    }
+
+    .file-name-display.show {
+      display: block;
+    }
+
     @media (max-width: 900px) {
       main {
         grid-template-columns: 1fr;
@@ -506,7 +563,18 @@
 
     <div class="field">
       <label>Original Text</label>
-      <textarea rows="6" placeholder="Paste the passage, chapter excerpt, article, or assignment you want adapted…"></textarea>
+      <div class="textarea-wrapper">
+        <textarea rows="6" placeholder="Paste the passage, chapter excerpt, article, or assignment you want adapted…"></textarea>
+        <div class="textarea-actions">
+          <div class="file-input-wrapper">
+            <button type="button" class="btn-file-upload" onclick="document.getElementById('fileInput').click()">
+              📎 Insert File
+            </button>
+            <input type="file" id="fileInput" accept=".txt,.pdf,.doc,.docx" />
+          </div>
+          <div class="file-name-display" id="fileName"></div>
+        </div>
+      </div>
       <div class="helper-text">Intentra uses this text as the foundation for every adapted version.</div>
     </div>
 
