--- a/public/index.html
+++ b/public/index.html
@@ -531,6 +531,37 @@
       display: block;
     }
 
+    /* Logo styling */
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 2px;
+      font-size: 1.6rem;
+      font-weight: 600;
+      color: var(--primary);
+      cursor: pointer;
+      transition: opacity 0.2s ease;
+      flex-direction: row-reverse;
+    }
+
+    .logo:hover {
+      opacity: 0.8;
+    }
+
+    .logo-icon {
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+    }
+
+    .logo-icon svg {
+      width: 100%;
+      height: 100%;
+    }
+
     @media (max-width: 900px) {
       main {
         grid-template-columns: 1fr;
@@ -542,7 +573,26 @@
 <body>
 
 <header>
-  <div class="logo">Intentra</div>
+  <div class="logo">
+    <div class="logo-icon">
+      <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <linearGradient id="logoGrad" x1="0%" y1="0%" x2="100%" y2="100%">
+            <stop offset="0%" style="stop-color:#2563eb;stop-opacity:1" />
+            <stop offset="100%" style="stop-color:#14b8a6;stop-opacity:1" />
+          </linearGradient>
+        </defs>
+        <!-- Central spark/diamond -->
+        <polygon points="100,50 130,100 100,150 70,100" fill="url(#logoGrad)"/>
+        <!-- Surrounding rays -->
+        <line x1="100" y1="20" x2="100" y2="50" stroke="url(#logoGrad)" stroke-width="5" stroke-linecap="round" opacity="0.6"/>
+        <line x1="100" y1="150" x2="100" y2="180" stroke="url(#logoGrad)" stroke-width="5" stroke-linecap="round" opacity="0.6"/>
+        <line x1="20" y1="100" x2="50" y2="100" stroke="url(#logoGrad)" stroke-width="5" stroke-linecap="round" opacity="0.6"/>
+        <line x1="150" y1="100" x2="180" y2="100" stroke="url(#logoGrad)" stroke-width="5" stroke-linecap="round" opacity="0.6"/>
+      </svg>
+    </div>
+    <span>Intentra</span>
+  </div>
 </header>
 
 <section class="hero">
